# ProgrammingBasicsLab8

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  client.c  server.c
data/: data.txt  source.json
include/: actor.h  file.h  list.h  request.h
scripts/: install-libprogbase.sh
src/: actor.c  file.c  list.c  request.c
